--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@
     --searchbar_color: var(--cinza_neutro);
     --menu_color: var(--cinza_neutro);
     --cardText_color: #ffae2d;
-    --mobile_menu_text_color: #4400ff;
+    --mobile_menu_text_color: #00aaff;
 }
 
 * {
@@ -292,19 +292,19 @@ h1 {
 }
 
 .Navbar_Logo {
-    animation: Rotate360 60s linear infinite;
     width: 50px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    animation: Rotate360Y 10s ease-in-out infinite;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
 }
 
 .Navbar_Logo_Vetor_1 {
-    fill: var(--amarelo_primario);
+    fill: var(--text_color);
+    transition: all 0.2s ease-in-out;
 }
 
 .Navbar_Logo_Vetor_2 {
@@ -322,7 +322,7 @@ h1 {
 .Navbar_Logo svg {
     width: 100%;
     height: 100%;
-    fill: var(--amarelo_primario);
+    fill: var(--text_color);
 }
 
 .Navbar_Logo:hover {
@@ -383,6 +383,7 @@ h1 {
     font-weight: normal !important;
     transition: all 0.2s ease-in-out;
     font-size: clamp(1rem, 2vw, 1.2rem);
+    letter-spacing: -2px;
 }
 
 .Navbar_Main_Links.active {
@@ -1808,9 +1809,10 @@ h1 {
     align-items: center;
 
     font-weight: 800;
-    font-size: clamp(1rem, 2vw, 1rem);
+    font-size: clamp(0.8rem, 2vw, 1rem);
     gap: 0.3rem;
 
+    text-align: center;
     text-transform: uppercase;
     line-height: 1.2rem;
 
@@ -1958,17 +1960,38 @@ h1 {
 
 .Brand_Logo {
     position: absolute;
-    bottom: -200px;
-    right: -200px;
-    height: 75%;
+    bottom: 5px;
+    right: -5px;
+    height: 50%;
     aspect-ratio: 1/1;
     object-fit: contain;
-    animation: Rotate360 30s linear infinite;
     transition: all 0.2s ease-in-out;
+    fill: var(--text_color);
+    animation: Rotate360Y 10s ease-in-out infinite;
+    transform-style: preserve-3d;
+    perspective: 2000px;
+}
+
+@keyframes Rotate360Y {
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    50% {
+        transform: rotateY(180deg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+    }
+}
+
+.Brand_Logo_Path {
+    fill: var(--text_color);
 }
 
 .Brand_Logo:hover {
-    scale: 2;
+    scale: 1.5;
 }
 
 .Brand_Declaration {
@@ -2042,7 +2065,7 @@ h1 {
 }
 
 .Sobre_Card_Title {
-    font-size: clamp(1.4rem, 2vw, 2.4rem);
+    font-size: clamp(1.2rem, 2vw, 2.4rem);
     line-height: 1.5rem;
 }
 
@@ -2385,10 +2408,11 @@ h1 {
 }
 
 .Card_Product_Type {
-    font-size: clamp(1.2rem, 2vw, 1.4rem);
+    font-size: clamp(1.1rem, 2vw, 1.3rem);
     font-weight: 400;
     color: var(--cardText_color);
     position: relative;
+    text-align: center;
 }
 
 .Card_Product_Type::before,
@@ -2538,6 +2562,7 @@ h1 {
     align-items: center;
     margin-top: 0rem;
     gap: 0.5rem;
+    font-size: clamp(0.9rem, 1vw, 1rem);
 }
 
 .Acoes_Contato {
@@ -2565,6 +2590,7 @@ h1 {
     background-color: var(--text_color);
     color: var(--bg_color);
     cursor: pointer;
+    text-align: center;
 }
 
 .Acao_Contato:hover,
