--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@
     --text_color_faded_2: #ffffff5d;
 
     --anchor_color: #00aaff;
-    --anchor_hover_color: #ae00ff;
+    --anchor_hover_color: #ffffff;
 
     --primary_color: #00aaff;
     --primary_color_faded_1: #00aaffb9;
@@ -222,7 +222,7 @@
     --shopping_cart_color: var(--cinza_neutro);
     --searchbar_color: var(--cinza_neutro);
     --menu_color: var(--cinza_neutro);
-    --cardText_color: #ffae2d;
+    --cardText_color: #00aaff;
     --mobile_menu_text_color: #00aaff;
 }
 
@@ -349,6 +349,10 @@ h1 {
     color: var(--primary_color);
     font-family: "Researcher_WOFF2";
     font-weight: normal !important;
+}
+
+.Navbar_LogoType {
+    font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 .Navbar_Main {
@@ -2210,6 +2214,10 @@ h1 {
     flex-shrink: 0;
 }
 
+.Sobre_Img {
+    border-radius: var(--small_gap);
+}
+
 .Sobre_Text_Container {
     display: flex;
     flex-direction: column;
@@ -2234,7 +2242,7 @@ h1 {
 }
 
 .Kakaw_Header {
-    font-size: clamp(1.1rem, 2vw, 1.6rem);
+    font-size: clamp(1rem, 2vw, 1.6rem);
     color: var(--primary_color);
 }
 
@@ -2244,7 +2252,7 @@ h1 {
     justify-content: start;
     align-items: center;
     gap: 0.25rem;
-    font-size: clamp(1rem, 2vw, 1.4rem);
+    font-size: clamp(0.9rem, 2vw, 1.4rem);
 }
 
 /* SEÇÃO 3 - PRODUTOS */
@@ -2317,8 +2325,8 @@ h1 {
 .Product_Type.active,
 .Product_Type:focus,
 .Product_Type:hover {
-    background-color: var(--anchor_hover_color);
-    color: var(--marrom_primario);
+    background-color: var(--primary_color);
+    color: #ffffff;
     scale: 1.05;
 }
 
@@ -2963,10 +2971,6 @@ h1 {
         padding: 0.5rem;
     }
 
-    .Cookies_Banner_Body {
-        justify-content: center;
-    }
-
     .Mapa_Body {
         padding: 0;
     }
@@ -3015,6 +3019,7 @@ h1 {
     .Card_Product_Detail_Button,
     .Card_AddToCart_Button {
         padding-inline: 0.5rem;
+        padding-block: 0.75rem;
     }
 
     .Product_Card {
