--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,9 @@
     font-size: 18px;
     font-family: "Roboto", sans-serif;
 
+    --experience-cards-ammount: 17;
+    --partners-card-ammount: 12;
+
     /* Legacy Colors */
     --cinza_escuro: #333;
     --cinza_neutro: #b3b3b3;
@@ -1998,6 +2001,101 @@ h1 {
     scale: 1.5;
 }
 
+.card_carroussel {
+    position: absolute;
+    bottom: var(--small_gap);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
+
+.carroussel_experiencias {
+    bottom: auto;
+    top: var(--small_gap);
+}
+
+.card_carroussel_track {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: var(--small_gap);
+
+    height: 100%;
+}
+
+.track_experiencias {
+    animation: scrollLeft_Experiencias 90s linear infinite;
+}
+
+.track_parceiros {
+    animation: scrollRight_Parceiros 90s linear infinite;
+}
+
+.carroussel_card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    aspect-ratio: 1/1;
+    background-color: var(--bg_color_faded_1);
+    border-radius: var(--small_gap);
+    padding: var(--small_gap);
+    height: 100%;
+    overflow: hidden;
+}
+
+.carroussel_card_content {
+    position: absolute;
+    background-color: var(--bg_color);
+    color: var(--text_color);
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: var(--small_gap);
+}
+
+.carroussel_card_content:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.carroussel_card img {
+    width: 80%;
+}
+
+.experiencia_card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes scrollLeft_Experiencias {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(200px * var(--experience-cards-ammount) * 1));
+    }
+}
+
+@keyframes scrollRight_Parceiros {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(200px * var(--partners-card-ammount) * -1));
+    }
+}
+
 .Brand_Declaration {
     left: var(--small_gap);
     position: absolute;
@@ -2169,6 +2267,51 @@ h1 {
     font-size: 1.2rem;
 }
 
+.Sobre_Member_Container {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: var(--small_gap);
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.Sobre_Member_Card {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: var(--small_gap);
+    background-color: var(--bg_color);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: var(--small_gap);
+    padding: var(--small_gap) 0 var(--small_gap) 0;
+}
+
+.Sobre_Member_Image_Container {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: var(--small_gap);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.Sobre_Member_Image {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: var(--small_gap);
+    object-fit: cover;
+}
+
 .Tropical_Description {
     font-size: clamp(1.2rem, 2vw, 2.4rem);
     display: flex;
@@ -2216,6 +2359,12 @@ h1 {
 
 .Sobre_Img {
     border-radius: var(--small_gap);
+    filter: opacity(0.8);
+}
+
+.WideImg {
+    max-height: 50%;
+    object-fit: cover;
 }
 
 .Sobre_Text_Container {
@@ -3013,7 +3162,7 @@ h1 {
 
     .LP_Section_01_Inicio {
         padding: var(--small_gap);
-        justify-content: start;
+        justify-content: center;
     }
 
     .Card_Product_Detail_Button,
