--- a/src/index.css
+++ b/src/index.css
@@ -343,15 +343,22 @@ h1 {
 
 .Navbar_LogoType_Container {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: start;
     justify-content: start;
-    gap: 0.4rem;
+    gap: 0;
 
     text-decoration: none;
     color: var(--primary_color);
     font-family: "Researcher_WOFF2";
     font-weight: normal !important;
+}
+
+.Human {
+}
+
+.Robotics {
+    margin-top: -0.5rem;
 }
 
 .Navbar_LogoType {
