--- a/src/index.css
+++ b/src/index.css
@@ -1653,6 +1653,18 @@ h1 {
     width: 100%;
 }
 
+/* SOLUTION CONTAINERS */
+.Solution_Viewer {
+    height: 100%;
+    width: 100%;
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
+}
+
 /* HELP CONTAINERS */
 
 .Help_Container {
