--- a/src/index.css
+++ b/src/index.css
@@ -2816,16 +2816,32 @@ h1 {
 .Solution_Viewer {
     height: 100%;
     width: 100%;
-    border: 1px solid var(--text_color);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
     text-align: center;
-    padding: var(--small_gap);
+    border-radius: var(--small_gap);
+}
+
+.Solution_Card {
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--text_color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: var(--small_gap);
     border-radius: var(--small_gap);
+    padding: var(--small_gap);
+}
+
+.Solution_Title {
+    font-family: "Researcher_WOFF2";
+    text-transform: uppercase;
+    font-size: clamp(1.8rem, 2vw, 2.4rem);
 }
 
 .Secondary_Page {
