--- a/src/index.css
+++ b/src/index.css
@@ -2140,7 +2140,7 @@ h1 {
     left: var(--small_gap);
     position: absolute;
     color: var(--primary_color);
-    font-size: clamp(3rem, 8vw, 7rem);
+    font-size: clamp(2.8rem, 8vw, 7rem);
     z-index: 3;
     filter: drop-shadow(0 0 3px var(--bg_color));
     text-align: center;
@@ -3278,7 +3278,9 @@ h1 {
         align-items: center;
         gap: var(--small_gap);
         overflow-y: auto;
+        overflow-x: hidden;
         padding-right: 0.5rem;
+        scroll-behavior: smooth;
     }
 
     .Product_Detail_Image_Container {
@@ -3304,9 +3306,11 @@ h1 {
     .Product_Detail_Image {
         scroll-snap-align: start;
         height: 100%;
+        min-width: 100%;
         aspect-ratio: 1/1;
         object-fit: cover;
         border-radius: var(--small_gap);
+        flex-shrink: 0;
     }
 
     .Product_Detail_Text_Container {
@@ -3322,6 +3326,7 @@ h1 {
 
     .Product_Detail_Footer {
         width: 100%;
+        flex-direction: column;
     }
 
     .Help_Container {
@@ -3367,6 +3372,10 @@ h1 {
         padding-left: 0.5rem;
     }
 
+    .Brand_Declaration {
+        margin-top: var(--small_gap);
+    }
+
     /* SOBRE */
 
     .Sobre_Card_Content {
@@ -3403,10 +3412,16 @@ h1 {
         justify-content: center;
     }
 
-    .Card_Product_Detail_Button,
     .Card_AddToCart_Button {
-        padding-inline: 0.5rem;
-        padding-block: 0.75rem;
+        gap: 0;
+    }
+
+    .AddToCartLeft {
+        width: 60%;
+    }
+
+    .AddToCartRight {
+        width: 40%;
     }
 
     .Product_Card {
