--- a/src/index.css
+++ b/src/index.css
@@ -1,84 +1,3 @@
-/* Cooper_TrueType Normal */
-@font-face {
-    font-family: "Cooper_TrueType";
-    src: url("./assets/fonts/CooperBold_TrueType.ttf") format("truetype");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* Cooper_TrueType Bold */
-@font-face {
-    font-family: "Cooper_TrueType";
-    src: url("./assets/fonts/CooperBlack_TrueType.ttf") format("truetype");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: bold;
-    font-style: normal;
-}
-
-/* ProfilePro 100 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Thin_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 100;
-    font-style: normal;
-}
-
-/* ProfilePro 200 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_ExtraLight_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 200;
-    font-style: normal;
-}
-
-/* ProfilePro 300 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Light_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 300;
-    font-style: normal;
-}
-
-/* ProfilePro 400 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Regular_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 400;
-    font-style: normal;
-}
-
-/* ProfilePro 500 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Medium_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 500;
-    font-style: normal;
-}
-
-/* ProfilePro 600 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Bold_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 600;
-    font-style: normal;
-}
-
-/* ProfilePro 900 */
-@font-face {
-    font-family: "ProfilePro_WOFF2";
-    src: url("./assets/fonts/ProfilePro_Black_WOFF2.woff2") format("woff2");
-    /* Add additional src lines for different font file formats if necessary */
-    font-weight: 900;
-    font-style: normal;
-}
-
 /* Researcher 300 */
 @font-face {
     font-family: "Researcher_WOFF2";
@@ -268,6 +187,23 @@ h1 {
 
 .Mobile_Only {
     display: none;
+}
+
+.Loading_Screen_Test {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bg_color);
+    color: var(--text_color);
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--small_gap);
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
 }
 
 /* NAVBAR */
@@ -1460,6 +1396,8 @@ h1 {
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    font-family: "Researcher_WOFF2";
 }
 
 .Product_Detail_Close_Btn {
@@ -2629,6 +2567,10 @@ h1 {
     justify-content: center;
 }
 
+.Product_Card:hover .Product_Description_Background {
+    opacity: 1;
+}
+
 .Product_Card:hover .Card_Product_Description,
 .Product_Card:focus-within .Card_Product_Description {
     opacity: 1;
@@ -2736,9 +2678,23 @@ h1 {
 .Card_Product_Description {
     opacity: 0;
     margin-top: auto;
-    color: var(--fundo_claro);
-    font-size: clamp(1rem, 2vw, 1.2rem);
+    color: var(--text_color);
+    font-size: clamp(0.8rem, 2vw, 1rem);
     transition: all 0.2s ease-in-out;
+}
+
+.Product_Description_Background {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 60%;
+    background: linear-gradient(to top, var(--bg_color), transparent);
+    opacity: 0;
+    border-radius: var(--small_gap);
+    transition: all 0.2s ease-in-out;
+    z-index: -1;
 }
 
 .Product_Card_Footer {
