--- a/src/index.css
+++ b/src/index.css
@@ -285,23 +285,21 @@ h1 {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    gap: 0;
+    gap: var(--small_gap);
+    max-width: 200px;
+}
 
-    text-decoration: none;
-    color: var(--text_color);
-    font-family: "Researcher_WOFF2";
-    font-weight: normal !important;
+.Navbar_LogoType {
+    fill: var(--text_color);
+    width: 100%;
 }
 
 .Human {
+    width: 68%;
 }
 
 .Robotics {
     margin-top: -0.5rem;
-}
-
-.Navbar_LogoType {
-    font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 .Navbar_Main {
@@ -2004,6 +2002,10 @@ h1 {
     height: 100%;
 }
 
+.card_carroussel_track:hover {
+    animation-play-state: paused;
+}
+
 .track_experiencias {
     animation: scrollLeft_Experiencias 90s linear infinite;
 }
@@ -2087,7 +2089,7 @@ h1 {
 
 .Brand_Name {
     color: var(--primary_color);
-    font-size: clamp(6rem, 16vw, 14rem);
+    font-size: clamp(4.5rem, 16vw, 14rem);
     opacity: 0.5;
 }
 
