--- a/src/index.css
+++ b/src/index.css
@@ -249,18 +249,6 @@ h1 {
     transition: all 0.2s ease-in-out;
 }
 
-.Navbar_Logo_Vetor_2 {
-    fill: var(--vermelho_primario);
-}
-
-.Navbar_Logo_Vetor_3 {
-    fill: var(--amarelo_primario);
-}
-
-.Navbar_Logo_Vetor_4 {
-    fill: var(--marrom_primario);
-}
-
 .Navbar_Logo svg {
     width: 100%;
     height: 100%;
@@ -724,7 +712,7 @@ h1 {
     font-size: clamp(0.6rem, 1vw, 0.8rem);
     padding: 0.5rem;
     border-radius: 0.5rem;
-    background-color: var(--bg_color);
+    background-color: var(--menu_color);
     color: var(--text_color);
     display: flex;
     flex-direction: row;
@@ -735,7 +723,7 @@ h1 {
 
 .Config_Option.active {
     background-color: var(--anchor_hover_color);
-    color: var(--menu_color);
+    color: var(--text_color);
 }
 
 /* COOKIES BANNER */
@@ -788,6 +776,8 @@ h1 {
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    font-family: "Researcher_WOFF2";
 }
 
 .Cookies_Banner_Close_Btn {
@@ -823,6 +813,8 @@ h1 {
     justify-content: center;
     align-items: center;
 
+    max-width: 640px;
+
     font-size: clamp(1.2rem, 1vw, 1.4rem);
 
     text-align: center;
@@ -850,7 +842,7 @@ h1 {
     border-radius: 0 var(--small_gap) var(--small_gap) 0;
 
     padding: var(--small_gap);
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 0.5rem var(--bg_color);
 }
 
 .SearchBar::before {
@@ -911,10 +903,13 @@ h1 {
     font-size: 1rem;
     gap: 0.3rem;
 
+    text-align: center;
     text-transform: uppercase;
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    font-family: "Researcher_WOFF2";
 }
 
 .SearchBar_Input_Container {
@@ -994,7 +989,7 @@ h1 {
     justify-content: start;
     align-items: center;
 
-    font-weight: 300;
+    font-weight: 600;
     font-size: 1rem;
     gap: 0.3rem;
 
@@ -1008,7 +1003,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    align-items: center;
+    align-items: start;
 
     gap: var(--small_gap);
 }
@@ -1031,6 +1026,8 @@ h1 {
 
     gap: var(--small_gap);
     padding: var(--small_gap);
+
+    box-shadow: 0 0 0.5rem var(--bg_color);
 
     border-radius: var(--small_gap) 0 0 var(--small_gap);
     transition: background-color 0.2s ease-in-out;
@@ -1096,6 +1093,12 @@ h1 {
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    letter-spacing: 1px;
+
+    text-align: center;
+
+    font-family: "Researcher_WOFF2";
 }
 
 .Cart_List {
@@ -1152,13 +1155,15 @@ h1 {
 }
 
 .Cart_Item_Name {
-    font-size: 1rem;
+    font-size: 1.4rem;
+    line-height: 0.9;
     font-weight: 800;
     color: var(--text_color);
+    font-family: "Researcher_WOFF2";
 }
 
 .Cart_Item_Type {
-    margin-top: -0.4rem;
+    margin-top: -0.1rem;
     font-size: 0.8rem;
     font-weight: 400;
     color: var(--text_color);
@@ -1166,14 +1171,14 @@ h1 {
 
 .Cart_Item_Price {
     font-size: 1rem;
-    font-weight: 800;
+    font-weight: 600;
     color: var(--text_color);
 }
 
 .Cart_Item_Quantity {
-    margin-top: -0.4rem;
+    margin-top: -0.3rem;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 300;
     color: var(--text_color);
 }
 
@@ -1263,6 +1268,7 @@ h1 {
 .Cart_Total_Text,
 .Cart_Total_Value {
     font-size: clamp(1rem, 1.1vw, 1.2rem);
+    letter-spacing: 0px;
 }
 
 .Checkout_Button {
@@ -1528,6 +1534,7 @@ h1 {
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: var(--small_gap);
+    padding: var(--small_gap);
 }
 
 .Product_Detail_Text_Container {
@@ -1579,20 +1586,20 @@ h1 {
     background-color: var(--text_color);
 }
 
+.Product_Detail_FullDescription {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: var(--small_gap);
+}
+
 .Product_Detail_Text_Content {
     width: 100%;
     text-align: center;
     margin-block: 0.3rem;
     font-size: clamp(1rem, 2vw, 1.2rem);
-}
-
-.Product_Detail_Footer {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: var(--small_gap);
 }
 
 .Product_Component {
@@ -1601,12 +1608,12 @@ h1 {
     gap: var(--small_gap);
 }
 
-.Product_Detail_FullDescription {
+.Product_Detail_Footer {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: var(--small_gap);
 }
 
@@ -1661,6 +1668,8 @@ h1 {
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    font-family: "Researcher_WOFF2";
 }
 
 .Help_Container_Close_Btn {
@@ -1691,7 +1700,8 @@ h1 {
 
 .Help_Text_Container {
     height: 100%;
-    width: 50%;
+    width: 100%;
+    max-width: 640px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1791,6 +1801,8 @@ h1 {
     line-height: 1.2rem;
 
     color: var(--text_color);
+
+    font-family: "Researcher_WOFF2";
 }
 
 .Mapa_Close_Btn,
@@ -1932,42 +1944,6 @@ h1 {
     padding: var(--medium_gap);
 }
 
-.Brand_Logo {
-    position: absolute;
-    bottom: 5px;
-    right: -5px;
-    height: 50%;
-    aspect-ratio: 1/1;
-    object-fit: contain;
-    transition: all 0.2s ease-in-out;
-    fill: var(--text_color);
-    animation: Rotate360Y 10s ease-in-out infinite;
-    transform-style: preserve-3d;
-    perspective: 2000px;
-}
-
-@keyframes Rotate360Y {
-    0% {
-        transform: rotateY(0deg);
-    }
-
-    50% {
-        transform: rotateY(180deg);
-    }
-
-    100% {
-        transform: rotateY(360deg);
-    }
-}
-
-.Brand_Logo_Path {
-    fill: var(--text_color);
-}
-
-.Brand_Logo:hover {
-    scale: 1.5;
-}
-
 .card_carroussel {
     position: absolute;
     bottom: var(--small_gap);
@@ -2065,6 +2041,7 @@ h1 {
 
 .carroussel_card img {
     width: 80%;
+    border-radius: 0.5rem;
 }
 
 .experiencia_card img {
@@ -2113,7 +2090,7 @@ h1 {
     max-width: 700px;
 }
 
-/* SEÇÃO 2 - SOBRE O CACAU E SOBRE A EMPRESA */
+/* SEÇÃO 2 (Agora 4) - SOBRE A HUMAN ROBOTICS E SOBRE A ROBÓTICA */
 
 .LP_Section_02_Sobre {
     align-items: start;
@@ -2270,110 +2247,34 @@ h1 {
     font-size: 1.2rem;
 }
 
-.Sobre_Member_Container {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: start;
-    gap: var(--small_gap);
+.Sobre_Img {
     width: 100%;
     height: 100%;
-    overflow-y: auto;
-}
-
-.Sobre_Member_Card {
-    width: 100%;
-    max-width: 300px;
-    flex-grow: 1;
-    flex-shrink: 0;
-    aspect-ratio: 1/1;
-    border-radius: var(--small_gap);
-    background-color: var(--bg_color);
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    gap: var(--small_gap);
-    padding: var(--small_gap) 0 var(--small_gap) 0;
-    position: relative;
-}
-
-.Sobre_Member_Image_Container {
-    width: 100%;
-    aspect-ratio: 1/1;
-    max-height: 330px;
-    max-width: 330px;
-    border-radius: var(--small_gap);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-
-.Sobre_Member_Image {
-    width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: var(--small_gap);
     object-fit: cover;
 }
 
-.Sobre_Member_Text_Container {
-    width: 100%;
+.Sobre_Header_Text {
+    font-size: clamp(1rem, 2vw, 1.6rem);
+    color: var(--primary_color);
+}
+
+.Sobre_Description_Text {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    gap: 0.3rem;
-    text-align: center;
+    gap: 0.25rem;
+    font-size: clamp(0.9rem, 2vw, 1.4rem);
 }
 
-.Sobre_Member_Interactions {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: var(--small_gap);
-}
-
-.Sobre_Interaction_Icon {
-    width: 2rem;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    background-color: var(--text_color);
-    color: var(--bg_color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    text-decoration: none;
-}
-
-.Sobre_Interaction_Icon:hover {
-    scale: 1.1;
-}
-
-.Tropical_Description {
-    font-size: clamp(1.2rem, 2vw, 2.4rem);
-    display: flex;
-    flex-direction: column;
-    gap: var(--small_gap);
-    font-weight: 600;
-    color: var(--primary_color);
-}
-
-.Link_Leticia {
+.Link_Pessoa {
     color: var(--primary_color);
     text-underline-offset: 0.3rem;
     transition: all 0.2s ease-in-out;
 }
 
-.Link_Leticia:hover,
-.Link_Leticia:focus {
+.Link_Pessoa:hover,
+.Link_Pessoa:focus {
     color: var(--primary_color);
     text-underline-offset: 0.5rem;
 }
@@ -2408,7 +2309,7 @@ h1 {
 }
 
 .WideImg {
-    max-height: 50%;
+    max-height: 75%;
     object-fit: cover;
 }
 
@@ -2422,36 +2323,103 @@ h1 {
     padding-right: 0.5rem;
 }
 
-.FAQ_Container {
+.Equipe_Text_Container {
+    height: auto;
+    flex-shrink: 0;
+}
+
+.Sobre_Member_Container {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
     gap: var(--small_gap);
-}
-
-.Sobre_Text_Container::-webkit-scrollbar-thumb {
-    background-color: var(--text_color_faded_2);
-}
-
-.Sobre_Mobile_Only {
-    display: none;
-}
-
-.Sobre_Img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    overflow-x: auto;
+    padding-block: var(--small_gap);
 }
 
-.Kakaw_Header {
-    font-size: clamp(1rem, 2vw, 1.6rem);
-    color: var(--primary_color);
-}
-
-.Kakaw_Description {
+.Sobre_Member_Card {
+    width: 100%;
+    max-width: 250px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+    border-radius: var(--small_gap);
+    background-color: var(--bg_color);
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
-    gap: 0.25rem;
-    font-size: clamp(0.9rem, 2vw, 1.4rem);
+    gap: var(--small_gap);
+    position: relative;
+}
+
+.Sobre_Member_Image_Container {
+    width: 100%;
+    aspect-ratio: 1/1;
+    max-height: 250px;
+    max-width: 250px;
+    border-radius: var(--small_gap);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+}
+
+.Sobre_Member_Image {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: var(--small_gap);
+    object-fit: cover;
+}
+
+.Sobre_Member_Text_Container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+.Sobre_Member_Interactions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: var(--small_gap);
+    margin-top: 0.5rem;
+}
+
+.Sobre_Interaction_Icon {
+    width: 2rem;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: var(--text_color);
+    color: var(--bg_color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+    text-decoration: none;
+}
+
+.Sobre_Interaction_Icon:hover {
+    scale: 1.1;
+}
+
+.FAQ_Container {
+    gap: var(--small_gap);
+}
+
+.Sobre_Mobile_Only {
+    display: none;
 }
 
 /* SEÇÃO 3 - PRODUTOS */
