--- a/src/index.css
+++ b/src/index.css
@@ -1775,6 +1775,30 @@ h1 {
     transform: translate3d(0, 0, 0);
 }
 
+.Solution_Detail_Container {
+    z-index: 8;
+    position: absolute;
+    top: var(--navbar_height);
+    left: 0;
+    width: 60%;
+    height: var(--section_viewer_height);
+    margin-left: 20%;
+    margin-right: 20%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: var(--small_gap);
+
+    padding-block: var(--small_gap);
+    padding-inline: var(--small_gap);
+
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
+    border-radius: var(--small_gap);
+    transform: translate3d(0, 0, 0);
+}
+
 .Mapa_Container {
     top: 0;
     width: 100%;
@@ -3021,21 +3045,24 @@ h1 {
     justify-content: start;
     align-items: center;
     gap: var(--small_gap);
+    height: 100%;
 }
 
 .Solution_Detail_Image_Container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: start;
     align-items: center;
     width: 50%;
+    height: 100%;
     gap: var(--small_gap);
-    overflow-y: auto;
+    padding: var(--small_gap);
+    overflow-x: auto;
 }
 
 .Solution_Detail_Image {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: var(--small_gap);
     filter: opacity(0.8);
@@ -3071,7 +3098,7 @@ h1 {
 .Solution_Partner {
     position: relative;
     width: 100%;
-    max-width: 200px;
+    max-width: 150px;
     flex-grow: 1;
     flex-shrink: 0;
     aspect-ratio: 1/1;
@@ -3083,9 +3110,18 @@ h1 {
 }
 
 .Solution_Partner img {
-    max-width: 200px;
+    width: 100%;
     border-radius: var(--small_gap);
     filter: opacity(0.5);
+}
+
+.Solution_Detail_Footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: var(--small_gap);
 }
 
 /* FOOTER */
